# darwin-rag

./: .gitattributes  Dockerfile  README.md  chainlit.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
chroma/: index_metadata.pickle
demo_app/: main.py
download/: Fixed_Term_Contracts_FTCs.csv  Legal_Coverage_General.csv  Legal_Coverage_Reference.csv  Probationary_Trial_Period.csv  Procedures_for_collective_dismissals.csv  Procedures_for_individual_dismissals_general.csv  Procedures_for_individual_dismissals_notice_period.csv  Redress.csv  Redundancy_and_severance_pay.csv  Valid_and_prohibited_grounds_for_dismissal.csv  Workers_enjoying_special_protection_against_dismissal.csv
